Added appsettings.json to .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Gym Web Application/Gym Web Application/bin/
 Gym Web Application/Gym Web Application/obj/
+Gym Web Application/Gym Web Application/appsettings.json
