activate-delete works

--- a/Gym Web Application/Gym Web Application/appsettings.json
+++ b/Gym Web Application/Gym Web Application/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-     "DefaultConnection":"server=DESKTOP-EBLQ1DS\\SQLEXPRESS;database=GymDB;Integrated Security=true;TrustServerCertificate=true;"
+     "DefaultConnection":"server=DESKTOP-HTV9N6S\\SQLEXPRESS;database=GymDB;Integrated Security=true;TrustServerCertificate=true;"
   },
   
   "Logging": {
