--- a/.gitignore
+++ b/.gitignore
@@ -484,3 +484,5 @@ $RECYCLE.BIN/
 
 # Vim temporary swap files
 *.swp
+Gym Web Application/Gym Web Application/appsettings.json
+Gym Web Application/Gym Web Application/appsettings.json
