correct smtp mail pw

--- a/Gym Web Application/Gym Web Application/appsettings.json
+++ b/Gym Web Application/Gym Web Application/appsettings.json
@@ -17,6 +17,6 @@
     "SenderName": "Gym Web Application",
     "SenderEmail": "profitgym256@gmail.com",
     "Username": "profitgym256@gmail.com",
-    "Password": "rcyphpzalbvktrkt"
+    "Password": "mnrcgmscblbqhcux"
   }
 }
